--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5.js</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>A&T Teamplay</title>
+  <link rel="preload" href="font.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'CustomFont', sans-serif;
+    }
+
+    @font-face {
+      font-family: 'CustomFont';
+      src: url('font.ttf') format('truetype');
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>팀플</h1>
-        <p>아래 링크를 클릭하여 프로그램을 감상하세요.</p>
-    </header>
+  <h1>A&T Teamplay 시작</h1>
 
-    <section id="projects">
-        <div class="project">
-            <h2>프로젝트</h2>
-            <p>팀플레이입니다.</p>
-            <a href="teamplay/index.html">
-            </a>
-        </div>
-
-    </section>
+  <!-- window.js를 불러오는 스크립트 -->
+  <script src="window.js"></script>
 </body>
 </html>
