--- a/index.html
+++ b/index.html
@@ -2,24 +2,23 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A&T Teamplay</title>
   <link rel="preload" href="font.ttf" as="font" type="font/ttf" crossorigin="anonymous">
   <style>
-    body {
-      margin: 0;
-      font-family: 'CustomFont', sans-serif;
-    }
-
     @font-face {
       font-family: 'CustomFont';
       src: url('font.ttf') format('truetype');
+    }
+
+    body {
+      margin: 0;
+      font-family: 'CustomFont', sans-serif;
     }
   </style>
 </head>
 <body>
   <h1>A&T Teamplay 시작</h1>
-
-  <!-- window.js를 불러오는 스크립트 -->
   <script src="window.js"></script>
 </body>
 </html>
